Update to Java10